--- a/source/SomeClassLib.Tests/SomeClassLib.Tests.csproj
+++ b/source/SomeClassLib.Tests/SomeClassLib.Tests.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
+    <ImplicitUsing>enable</ImplicitUsing>
+    <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
