--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,7 +1,7 @@
 next-version: 0.1
 branches:
   master:
-    regex: ^master$
+    regex: ^main$
     mode: ContinuousDeployment
     tag: ""
   feature:
