--- a/source/SomeClassLib/SomeClassLib.csproj
+++ b/source/SomeClassLib/SomeClassLib.csproj
@@ -37,4 +37,8 @@
     <None Include="../../README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SomePeerDependency\SomePeerDependency.csproj" />
+  </ItemGroup>
+
 </Project>
