--- a/.editorconfig
+++ b/.editorconfig
@@ -16,9 +16,13 @@ indent_style = space
 tab_width = 4
 
 # New line preferences
-insert_final_newline = true
 trim_trailing_whitespace = true
 
+# C# 10
+csharp_style_namespace_declarations = file_scoped
+csharp_style_prefer_primary_constructors = true:suggestion
+dotnet_diagnostic.IDE0290.severity = suggestion
+resharper_convert_to_primary_constructor_highlighting = true:suggestion
 
 #### .NET Coding Conventions ####
 
@@ -67,9 +71,9 @@ dotnet_code_quality_unused_parameters = all:suggestion
 #### C# Coding Conventions ####
 
 # var preferences
-csharp_style_var_elsewhere = false:silent
-csharp_style_var_for_built_in_types = false:silent
-csharp_style_var_when_type_is_apparent = false:silent
+csharp_style_var_elsewhere = true
+csharp_style_var_for_built_in_types = true
+csharp_style_var_when_type_is_apparent = true
 
 # Expression-bodied members
 csharp_style_expression_bodied_accessors = true:silent
