--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -8,30 +8,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0
+      - uses: gittools/actions/gitversion/setup@v0
         with:
           versionSpec: "5.x"
-      - name: Determine Version
+      - uses: gittools/actions/gitversion/execute@v0
         id: gitversion
-        uses: gittools/actions/gitversion/execute@v0
         with:
           useConfigFile: true
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.x
-      - name: Pack
-        run: dotnet pack source -c Release /p:Version=${{ steps.gitversion.outputs.majorMinorPatch }} /p:InformationalVersion=${{ steps.gitversion.outputs.informationalVersion }} /p:PackageReleaseNotes="https://github.com/$GITHUB_REPOSITORY/releases/tag/${{ steps.gitversion.outputs.majorMinorPatch }}" -o ./releases
-      - name: Publish
-        run: dotnet nuget push ./releases/**/*.nupkg -k=${{ secrets.NUGETORGAPIKEY }} -s=nuget.org
-      - name: Create Release
+          dotnet-version: 9.0.x
+      - run: dotnet pack source -c Release /p:Version=${{ steps.gitversion.outputs.majorMinorPatch }} /p:InformationalVersion=${{ steps.gitversion.outputs.informationalVersion }} /p:PackageReleaseNotes="https://github.com/$GITHUB_REPOSITORY/releases/tag/${{ steps.gitversion.outputs.majorMinorPatch }}" -o ./releases
+      - run: dotnet nuget push ./releases/**/*.nupkg -k=${{ secrets.NUGETORGAPIKEY }} -s=nuget.org
+      - run: gh release create ${{ steps.gitversion.outputs.majorMinorPatch }} --generate-notes
         id: create_release
         continue-on-error: true
-        run: gh release create ${{ steps.gitversion.outputs.majorMinorPatch }} --generate-notes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
