--- a/source/SomeClassLib/SomeClassLib.csproj
+++ b/source/SomeClassLib/SomeClassLib.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
@@ -18,19 +18,19 @@
 
   <PropertyGroup>
     <DotNet8Version>8.0.0</DotNet8Version>
-    <DotNet7Version>7.0.0</DotNet7Version>
+    <DotNet9Version>9.0.0</DotNet9Version>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == '$(DotNet8Version)'">
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet8Version)" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="$(DotNet8Version)" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="$(DotNet8Version)" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet7Version)" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="$(DotNet7Version)" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="$(DotNet7Version)" />
+  <ItemGroup Condition="'$(TargetFramework)' == '$(DotNet9Version)'">
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet9Version)" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="$(DotNet9Version)" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="$(DotNet9Version)" />
   </ItemGroup>
 
   <ItemGroup>
